--- a/timeLine.html
+++ b/timeLine.html
@@ -20,7 +20,7 @@
         <nav-box></nav-box>
         <main>
             <div class="bgcImg">
-
+                <p>共计{{activities.length}}篇博客，继续加油！</p>
             </div>
             <article>
                 <div class="timeLine">
